--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Quote Generator" />
+    <meta name="description" content="WeatherWise Weather App" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <title>WeatherWise</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
