Got the API url working and set up some DOM elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>WeatherWise</h1>
+    <h2>Location</h2>
+    <p>Conditions</p>
+    <input type="text" name="zip-code" id="zip-code" maxlength="5" />
+    <button>Get weather</button>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
